--- a/package.json
+++ b/package.json
@@ -1,11 +1,28 @@
 {
   "name": "tattler",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Helper class that wraps an async function to be called later and returns a promise that resolves with the result of that former function when the said function is called",
-  "main": "dist/tattler.js",
+  "main": "./dist/tattler.js",
+  "types": "./dist/tattler.d.ts",
   "scripts": {
-    "test": "jest --watch"
+    "dev": "concurrently \"parcel watch tattler.ts\" \"tsc -p ./tsconfig.declaration.json\"",
+    "test": "jest --watch",
+    "lint": "eslint --ext .ts,.js ."
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,ts}": [
+      "eslint --fix",
+      "git add"
+    ]
+  },
+  "files": [
+    "./dist/**/*"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jdtzmn/tattler.git"
@@ -23,5 +40,21 @@
   "bugs": {
     "url": "https://github.com/jdtzmn/tattler/issues"
   },
-  "homepage": "https://github.com/jdtzmn/tattler#readme"
+  "homepage": "https://github.com/jdtzmn/tattler#readme",
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^1.11.0",
+    "@typescript-eslint/parser": "^1.11.0",
+    "concurrently": "^4.1.1",
+    "eslint": "^6.0.1",
+    "eslint-config-standard-with-typescript": "^7.1.0",
+    "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-jest": "^22.7.1",
+    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "husky": "^3.0.0",
+    "lint-staged": "^9.0.1",
+    "parcel-bundler": "^1.12.3",
+    "typescript": "^3.5.2"
+  }
 }
