--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "tattler",
-  "version": "0.2.0",
+  "version": "0.2.2",
   "description": "Helper class that wraps an async function to be called later and returns a promise that resolves with the result of that former function when the said function is called",
   "main": "./dist/tattler.js",
   "types": "./dist/tattler.d.ts",
   "scripts": {
-    "dev": "concurrently \"parcel watch tattler.ts\" \"tsc -p ./tsconfig.declaration.json\"",
+    "dev": "tsc --watch",
+    "build": "tsc",
     "test": "jest --watch",
     "lint": "eslint --ext .ts,.js ."
   },
@@ -54,7 +55,6 @@
     "eslint-plugin-standard": "^4.0.0",
     "husky": "^3.0.0",
     "lint-staged": "^9.0.1",
-    "parcel-bundler": "^1.12.3",
     "typescript": "^3.5.2"
   }
 }
